@@ -1,0 +1,6 @@
+EXTRA_DIST = Games.directory \
+	     Other.directory \
+             Root.directory  \
+	     Root.order      \
+	     Settings.directory \
+             Utilities.directory
